# tractoare

./: CMakeLists.txt  GUI.cpp  GUI.h  Model.cpp  Model.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Tester.cpp  Tester.h  Tractor.cpp  Tractor.h  main.cpp
